--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+tasks/migrations/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -294,5 +295,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+### Pycharm ###
+.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,virtualenv,linux,macos,windows
